# cli_LH

./: .env.cluster.example  .env.example  .gitignore  .goreleaser.yml  AGENTS.md  Dockerfile  README.md  README_CN.md  README_JA.md  check.ps1  config.example.yaml  docker-build.ps1  docker-build.sh  docker-compose.cluster.yml  docker-compose.yml  go.mod  manual_oauth.ps1  start.ps1  启动服务.bat
.github/agents/: deepseekpro.agent.md
.github/workflows/: desktop-check.yml  desktop-release.yml  desktop-sidecar-check.yml  docker-image.yml
cmd/cliproxy-switch/: main.go  main_test.go
cmd/fetch_antigravity_models/: main.go
cmd/fetch_codex_models/: main.go
cmd/server/: main.go  sidecar_profile_test.go
desktop/: PACKAGING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/scripts/: check-windows-installer-prereqs.ps1  prepare-sidecar.mjs  smoke-sidecar.ps1
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs  tray.rs
docs/: sdk-access.md  sdk-access_CN.md  sdk-advanced.md  sdk-advanced_CN.md  sdk-usage.md  sdk-usage_CN.md  sidecar-integration.md
examples/custom-provider/: main.go
examples/http-request/: main.go
examples/sidecar-controller/: README.md  controller.go  controller_test.go  main.go
examples/translator/: main.go
internal/access/: reconcile.go
internal/api/: redis_queue_protocol.go  server.go  server_test.go  (+2 more)
test/: amp_management_test.go  builtin_tools_translation_test.go  thinking_conversion_test.go  usage_logging_test.go
(+391 files in other folders)
