[package]
name = "cli-lh-desktop"
version = "0.1.0"
description = "Desktop cockpit for cli_LH"
edition = "2021"

[lib]
name = "cli_lh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
